# Interpreter

./: CMakeLists.txt
Source/: BufferSize.h  Interpreter.h  SInterpreter.cpp  SInterpreter.h  SString.h  main.cpp
Source/Interpreter/: CInterpreter.cpp  CInterpreter.h
Source/Memory/: BufferSize.h
Source/String/: SString.cpp  SString.h
